@@ -1,14 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 6ec6a12e6a2763428ab2638398d972af ChangeLog 509
-MD5 e76098c6b6f7b648439115f7e866f25a files/digest-viaideinfo-0.3 66
+DIST viaideinfo-0.3.tar.gz 153604
+EBUILD viaideinfo-0.3.ebuild 581 RMD160 d9f3c384a7bcf97e62cd308cc975f9a72457f73b SHA1 513355ab08a837a9f7b72178490cd97d5ee468b1 SHA256 835785faf9463e72c10e248a5313415d875b1a80d854f2cc9f076669e56f1eaf
+MD5 1de580c7d07030e646c973475f49d0cc viaideinfo-0.3.ebuild 581
+RMD160 d9f3c384a7bcf97e62cd308cc975f9a72457f73b viaideinfo-0.3.ebuild 581
+SHA256 835785faf9463e72c10e248a5313415d875b1a80d854f2cc9f076669e56f1eaf viaideinfo-0.3.ebuild 581
+MISC ChangeLog 594 RMD160 bfd5d3a2f216ab0933de68326c50529a2163434a SHA1 5be28c4d5ff9378bf7fd86121ffdb6e91ae50f1b SHA256 d2fc1fbf46f1812c5fb167c05e21e9e7fadf9eb1864557d3eddc8bc8d958b3d8
+MD5 a2b9ae1d1f5272f23ba3c947ac59a62a ChangeLog 594
+RMD160 bfd5d3a2f216ab0933de68326c50529a2163434a ChangeLog 594
+SHA256 d2fc1fbf46f1812c5fb167c05e21e9e7fadf9eb1864557d3eddc8bc8d958b3d8 ChangeLog 594
+MISC metadata.xml 224 RMD160 241554e7af3fd3cef4a29a9deb1b8abd639559ef SHA1 1519fdc96aba366da9a0a64894a95aacf4348d5a SHA256 4021c61685cbfdf2cd22a6b07d132a1ed166c2a38fa3628fcdec2d6a5a6d7354
 MD5 43c872252a620e391c449e150e344a3a metadata.xml 224
-MD5 b4734135f1d8becfb72df8a504d49026 viaideinfo-0.3.ebuild 582
+RMD160 241554e7af3fd3cef4a29a9deb1b8abd639559ef metadata.xml 224
+SHA256 4021c61685cbfdf2cd22a6b07d132a1ed166c2a38fa3628fcdec2d6a5a6d7354 metadata.xml 224
+MD5 e76098c6b6f7b648439115f7e866f25a files/digest-viaideinfo-0.3 66
+RMD160 691cd2e2739a79970f1db960bcb4d0a0f8a2de2d files/digest-viaideinfo-0.3 66
+SHA256 4cbab26ba3fb27e5267c3e7a94079b490d0012177e1a680becfb7050f7d179b9 files/digest-viaideinfo-0.3 66
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.2 (GNU/Linux)
+Version: GnuPG v1.4.3 (GNU/Linux)
 
-iD8DBQFDoYoBTOXg++0VvJQRAqQYAJ9lvKo1HE+jdpDOnSPBkM9dRMZydQCeJ/ZY
-gbMqT0WlZ5roCS+lSIGbxoE=
-=nZqW
+iD4DBQFEeDIXTOXg++0VvJQRAn5RAKDJN8OIxTw4Yk8QUTmd1AmVW6U7OACY8IEs
+P7HZgyhq8bj+joPsZtz1vA==
+=fydb
 -----END PGP SIGNATURE-----
