@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-block/viaideinfo/viaideinfo-0.3.ebuild,v 1.1 2005/12/15 15:21:19 dsd Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-block/viaideinfo/viaideinfo-0.3.ebuild,v 1.2 2006/05/27 10:44:28 dsd Exp $
 
 DESCRIPTION="Query VIA IDE controllers for various information"
 HOMEPAGE="http://www.reactivated.net/software/viaideinfo"
@@ -8,7 +8,7 @@ SRC_URI="http://www.reactivated.net/software/viaideinfo/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~x86"
+KEYWORDS="x86"
 IUSE=""
 
 DEPEND=">=sys-apps/pciutils-2.2.0"
