@@ -1,6 +1,9 @@
 # ChangeLog for sys-block/viaideinfo
-# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-block/viaideinfo/ChangeLog,v 1.2 2005/12/15 15:21:19 dsd Exp $
+# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-block/viaideinfo/ChangeLog,v 1.3 2006/05/27 10:44:28 dsd Exp $
+
+  27 May 2006; Daniel Drake <dsd@gentoo.org> viaideinfo-0.3.ebuild:
+  Stable on x86
 
 *viaideinfo-0.3 (15 Dec 2005)
 
